css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: Georgia, 'Times New Roman', Times, serif; /* Chosen elegant font */
    background: black;
    overflow-x: hidden;
}

.container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 20px;
}
#searchInput {
    background: linear-gradient(to right, beige, rgb(199, 187, 159));
    border: none;
    border-radius: 5px;
    padding: 5px 10px;
  }
  #searchInput-museum {
    background: linear-gradient(to right, beige, rgb(199, 187, 159));
    border: none;
    border-radius: 5px;
    padding: 5px 10px;
  }
  
  #searchInput-museum * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style-type: none;
    text-decoration: none;
  }
  

body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f4f4f4;
}

.parallax {
    position: relative;
    height: 100vh;
    overflow: hidden;
}

.parallax-container {
    position: absolute;
    width: 100%;
    height: 100%;
}

.parallax-img {
    position: absolute;
    width: 100%;
    height: auto;
}

.text-container {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: #fff;
    text-align: center;
}

#text {
    font-size: 3rem;
}

#text1 h2 {
    margin: 0;
}

#text1 h4 {
    margin: 0;
    font-size: 1.5rem;
}

.serching-container {
    padding: 20px;
    text-align: center;
}

.search-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 20px;
}

.search-container input {
    padding: 10px;
    width: 300px;
    border: 1px solid #ccc;
    border-radius: 5px;
}

.search-container i {
    margin-left: -30px;
    cursor: pointer;
}

.text-header {
    margin: 20px 0;
}

#museums {
    justify-content: center;
    align-items: center;
    height: 90vh;
}
  .container-museum{
    position: relative;
    top: 38%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 70%;
    height: 80%;
    box-shadow: 0 10px 30px #dbdbdb;
}

.container-museum .slide .item{
    width: 200px;
    height: 300px;
    position: absolute;
    top: 50%;
    transform: translate(0, -50%);
    border-radius: 20px;
    box-shadow: 0 30px 50px #505050;
    background-position: 50% 50%;
    background-size: cover;
    display: inline-block;
    transition: 0.5s;
}

.slide .item:nth-child(1),
.slide .item:nth-child(2){
    top: 0;
    left: 0;
    transform: translate(0, 0);
    border-radius: 0;
    width: 100%;
    height: 100%;
}


.slide .item:nth-child(3){
    left: 50%;
}
.slide .item:nth-child(4){
    left: calc(50% + 220px);
}
.slide .item:nth-child(5){
    left: calc(50% + 440px);
}

/* here n = 0, 1, 2, 3,... */
.slide .item:nth-child(n + 6){
    left: calc(50% + 660px);
    opacity: 0;
}



.item .content{
    position: absolute;
    top: 40%;
    left: 10%;
    width: 30%;
    text-align: left;
    color: beige;
    transform: translate(0, -50%);
    font-family: system-ui;
    display: none;
}


.slide .item:nth-child(2) .content{
    display: block;
}


.content .name{
    font-size: 150%;
    text-transform: uppercase;
    font-weight: bold;
    opacity: 0;
    animation: animate 1s ease-in-out 1 forwards;
}

.content .des{
    margin-top: 10%;
    margin-bottom: 20%;
    opacity: 0;
    animation: animate 1s ease-in-out 0.3s 1 forwards;
}
.button-link {
    display: inline-block;
    padding: 0.5rem 1rem;
    background-color: #8a6252;
    color: beige;
    text-decoration: none;
    border-radius: 5px;
    text-align: center;
    cursor: pointer;
    border: none;
    transition: 0.3s;
    animation: animate 1s ease-in-out;

}

.button-link:hover {
    background-color: #725144;
}


  .rating ion-icon {
    color: rgba(255, 217, 0, 0.759) ;
  
  }

@keyframes animate {
    from{
        opacity: 0;
        transform: translate(0, 100px);
        filter: blur(33px);
    }

    to{
        opacity: 1;
        transform: translate(0);
        filter: blur(0);
    }
}



.button{
    width: 100%;
    text-align: center;
    position: absolute;
    bottom: 20px;
}

.button button{
    width: 50px;
    height: 50px;
    background-color:  rgba(0, 0, 0, 0.8);; 
    border-radius: 50%;
    border: 2px solid black;
    color: beige;
        cursor: pointer;
        transition: background-color 0.3s;
        font-size: 25px;

      }
      
      .button button:hover {
        background-color:rgba(41, 41, 31, 0.8); 
        color:black;       }
   
  .highlighted {
    border: 2px solid #ffcc00;
    box-shadow: 0px 0px 10px rgba(255, 204, 0, 0.5);
 
  }
  
.nav-a{
    position: relative;
    top: 10px;
    color: black;
    text-decoration: none;
    padding:10px;
    padding-top: 0px;
    text-align: center;
    margin-top: 6px
}
.nav-a:hover{
    color: gold;
    transition: all 0.5s ease-out;
}
nav{
    text-align: center;
    position: fixed;
    width:100%;
    margin: 0px;
    background-color: beige;
    z-index: 200;
    height: 50px;
    top: 0px;
    overflow: hidden;
    display: flex;
    justify-content: center;
}
.lll {
    height: 50px;
    width: 50px;
    margin-left: 5px;
    position: absolute;
    right: 0; 
}
.search-container {
    display: flex;
    align-items: center;
    margin-top: 10px;
}

#search-input {
    padding: 8px;
    border: 1px solid #ccc;
    border-radius: 4px;
    margin-right: 5px;
    flex: 1;
}

#search-button {
    padding: 8px 15px;
    background-color: #060a0d; 
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}


/* nav {
    background-color: transparent;
    position: fixed;
    width: 100%;
    z-index: 1000;
    top: 0;
}

nav ul {
    list-style: none;
    display: flex;
}

nav ul li {
    margin-right: 20px;
}

nav ul li a {
    text-decoration: none;
    color: #fff;
    font-weight: bold;
} */
/* ... */

